# ZAM

./: .gitignore  README.md  makefile  pyproject.toml  requirements_dev.txt  setup.cfg  zam.py  zam_config.json
docs/: class_diagram.plantuml  generate.bash
src/zam/: config.py  pruner.py  replicator.py  scheduler.py  snapshoter.py  task.py  zam.py
tests/: test_bucketprune.py  test_scheduler.py  test_task.py  test_test.py
utilities/: example config.json  pre-commit-check.bash  systemd.service  user.conf
