[metadata]
name = ZAM
description = ZFS Automatic Manager
long_description = file: README.md
author = Ivan Johnson
#license = TODO
#license_file = TODO
version = 0.3.0.dev0
url = https://github.com/Ivan-Johnson/zam
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/althonos/{name}/issues

[options]
packages = zam
python_requires = >=3.9
package_dir = =src
zip_safe = yes

[options.entry_points]
console_scripts =
    zam = zam.zam:main

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=3.0
    mypy>=0.910
    flake8>=4.0

[options.package_data]
zam = py.typed

[flake8]
max-line-length = 80
